[project]
name = "gameflip-api"
version = "1.0.0"
description = "Uma API wrapper em Python para utilização com a plataforma Gameflip."
authors = [{ name="Gustavo Pedroso Bernardes", email="gpedrosobernardes@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["validators", "pydantic", "pyotp", "requests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pydantic-pycharm-plugin.parsable-types]
"src.gameflip_api.types.AwsCognitoUUID" = ["str"]