[project]
name = "gameflip-api"
version = "1.0.2"
description = "Uma API wrapper em Python para utilização com a plataforma Gameflip."
authors = [{ name="Gustavo Pedroso Bernardes", email="gpedrosobernardes@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["validators", "pydantic", "pyotp", "requests"]

[project.urls]
Homepage = "https://github.com/gpedrosobernardes/gameflip_api"
Source = "https://github.com/gpedrosobernardes/gameflip_api"
Issues = "https://github.com/gpedrosobernardes/gameflip_api/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pydantic-pycharm-plugin.parsable-types]
"src.gameflip_api.types.AwsCognitoUUID" = ["str"]